clusters/xs4/kube/finance/actualbudget/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual
  labels:
    app: actual
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: actual
  template:
    metadata:
      labels:
        app: actual
    spec:
      containers:
        - name: actual
          image: ghcr.io/actualbudget/actual:25.6.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5006
          volumeMounts:
            - mountPath: /data
              name: actual-data
      volumes:
        - name: actual-data
          persistentVolumeClaim:
            claimName: actual-data
