clusters/xs4/kube/finance/actualbudget/service.yaml
---
kind: Service
metadata:
  name: actual-service
  labels:
    app: actual
apiVersion: v1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5006
  selector:
    app: actual
