clusters/xs4/kube/finance/actualbudget/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-ingress
  annotations: 
    # Due to global whitelisting we need to override restricted access.
    # To use whitelisting/override global whitelisting use the row below:
    nginx.ingress.kubernetes.io/whitelist-source-range: "192.168.81.0/24,141.224.207.181/32"
    
    # Lets use letsencrypt
    cert-manager.io/cluster-issuer: "letsencrypt-production"

    # Force SSL
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

    # Allow larger transfers
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  tls:
    - hosts:
        - moneyz.apps.groeneveld.me
      secretName: actual-tls
  ingressClassName: nginx
  rules:
    - host: moneyz.apps.groeneveld.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-service
                port:
                  number: 80
